--- a/lib/webhukhs/templates/create_webhukhs_tables.rb.erb
+++ b/lib/webhukhs/templates/create_webhukhs_tables.rb.erb
@@ -1,11 +1,12 @@
-class CreateMunsterTables < ActiveRecord::Migration[7.0]
+class CreateWebhukhsTables < ActiveRecord::Migration<%= migration_version %>
+<% id_type = Rails.application.config.generators.options[:active_record][:primary_key_type] rescue nil %>
   def change
-    create_table :received_webhooks do |t|
+    create_table :received_webhooks <%= ", id: :#{id_type}" if id_type %> do |t|
       t.string :handler_event_id, null: false
       t.string :handler_module_name, null: false
       t.string :status, default: "received", null: false
 
-      # We don't assume, that we can always parse received body as JSON. Body could be invalid or partly missing,
+      # We don't assume that we can always parse the received body as JSON. Body could be invalid or partly missing,
       # we can argue how we can handle that for different integrations, but we still should be able to save this data
       # if it's required. Hence, we don't use :jsonb, but :binary type column here.
       t.binary :body, null: false
